<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_box_border"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="406dp"
        android:layout_marginTop="16dp"
        android:background="#CC5100"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="#001E88E5"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/First_Page_Heading"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_page_add_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/Add_Data"
                android:textSize="26sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/main_page_show_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/Show_Data"
                android:textSize="26sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/main_page_delete_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:text="@string/Delete_Data"
                android:textSize="26sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/main_page_clear_data"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:text="@string/Clear_All_Data"
            android:textSize="26sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>