<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94CDFF"
    tools:context=".add_data">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="286dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/add_page_border"
        android:orientation="vertical"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:text="@string/Student_Name"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Add_page_student_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="20"
                android:gravity="center_vertical"
                android:text="@string/Student_Marks"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Add_page_student_marks"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="24sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <Button
            android:id="@+id/add_page_add_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="#039BE5"
            android:text="@string/Add_Data"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Add_data_page"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>